--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- begin:navigation -->
     <nav>
       <ol class="nav-left">
-        <li><a href="#">Brand</a></li>
+        <!-- <li><a href="#">Brand</a></li> -->
         <li><a href="#">Browse</a></li>
       </ol>
       <ol class="nav-right">
